src/test/run-pass/issue-3895.rs
// xfail-test
fn main() {
    enum State { BadChar, BadSyntax }
    
    match BadChar {
        _ if true => BadChar,
        BadChar | BadSyntax => fail ,
    };
}
